<resources>
    <string name="app_name">TSC</string>
    <string name="register">注册</string>
    <string name="pwd_login">密码登录</string>
    <string name="code_login">验证码登录</string>
    <string name="hint_mobile">请输入手机号码</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="hint_pwd1">数字和字母组合的登录密码</string>
    <string name="hint_pwd2">请确认登录密码</string>
    <string name="hint_code">请输入验证码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="find_pwd">找回登录密码</string>
    <string name="login">登录</string>
    <string name="send">获取验证码</string>
    <string name="toast_mobile">请输入正确的手机号码！</string>
    <string name="toast_pwd">请输入至少8位密码！</string>
    <string name="toast_pwd1">请输入至少8位确认密码！</string>
    <string name="toast_pwd2">请确保两次输入的密码一致！</string>
    <string name="toast_code">请输入4位验证码！</string>
    <string name="toast_code_success">验证码已发送，请注意查收！</string>
    <string name="agree">我同意</string>
    <string name="service">《用户服务协议》</string>
    <string name="service1">用户服务协议</string>
    <string name="service_content">《TSC APP服务协议》（以下简称“本协议”）是您与TSC基金会（以下简称“本基金会”或“我们”）之间关于您注册、登录、使用本基金会提供的TSC区块链应用交易平台，注册、使用、管理交易平台账户，以及使用本基金会提供的相关中介服务所订立的协议。\n一、特别提示\n（一）TSC平台是由本基金会自主研发并完全合法拥有的互联网+区块链应用技术平台，按本协议的规定以及不定期发布的更新规则规定，提供TSC整体运营和TSC商城的兑换、担保和交易等服务（以下也称“本服务”或“TSC服务”）。\n（二）请您务必审慎阅读本协议，确保您充分理解本协议中各条款。特别是免除或限制责任的条款、违约责任及赔偿、争议解决和法律适用条款。当您按照注册页面提示填写信息、阅读并同意本协议且完成全部注册程序后，或您以其他本基金会允许的方式实际使用我们的服务时，即表示您已充分阅读、理解并接受本协议的全部内容，本协议即产生法律约束力。除非您接受本协议所有条款，否则您无权注册、登录或使用本协议所涉服务。您的注册、登录、使用等行为将视为对本协议的接受，并同意接受本协议各项条款的约束。您承诺接受并遵守本协议的约定，届时您不应以未阅读本协议的内容等理由，主张本协议无效或撤销本协议。本基金会通过TSC公众号和TSC APP及TSC网站发布的法律声明、使用规则等其他规定均属于本协议的补充，与本协议不可分割且具有同等法律效力。\n（三）您明确同意，本基金会有权根据需要制定、修改本协议及相关规则，并以在本平台公告的方式予以公布，无需另行单独通知您，变更后的协议和规则一经发布，立即取代原协议及规则并自动生效；若您在本协议内容公告变更后继续使用本服务的，表示您已充分阅读、理解并接受修改后的协议及规则，也将遵循修改后的协议内容使用本服务；若您不同意修改后的协议内容，您应停止使用本服务。\n（四）您保证，在您同意接受本协议并注册成为TSC用户时，您是具有完全民事行为能力的自然人、法人或者能够独立承担民事责任的其他组织；本协议内容不受您所属国家或地区法律的排斥。不具备前述条件的，您应立即终止注册或停止使用本服务。您在使用TSC服务时，自行决定是否与交易对象进行交易或转账等行为，且您自行承担与此相关的所有风险。\n（五）您明确同意，您在本平台上发生的所有交易，您不可撤销的授权由本基金会按照本协议的规定进行处理；同时本公司有权从交易平台获取您的相关信息。若双方交易产生纠纷，TSC有权按照交易平台的规则将争议款项的全部或部分支付给交易一方或双方，在协商过程中本基金会有权、有责任按照交易平台的指令进行数字资产的冻结、扣划。对因此给您造成的任何损失均不承担责任。但您确认，您使用讯链服务时，您仍应完全遵守本协议及本基金会制定的各项规则及界面提示等。\n二、定义及解释\n1.TSC APP：是指TSC基金会运营的TSC移动端应用软件。\n2.TSC：TSC数字资产，英文简写来自Time Space Chain。\n3.TSC商城：TSC的电子商城。\n4.TSC用户：是指享受TSC服务的用户；接受并同意本协议全部条款及本公司、TSC不定期发布和更新的法律条款和操作规则、通过平台进行INF交易、运营等服务的TSC注册会员。\n5.注册：注册是指用户登录平台，并按要求填写相关信息并确认同意履行相关协议的过程。\n6.交易平台账户：TSC钱包地址是本基金会向您提供的有效交易地址。您可自行为该账户设置账号密码和支付密码，用以查询您的资产、交易、预付、应收或应付款。您需使用本人手机号码或者本基金会允许的其它方式作为登录手段来登录该交易平台账户。（以下简称该账户）\n7.TSC交易：您通过交易平台进行的TSC交易活动。\n8.手续费：您在交易平台达成TSC交易或提现而向TSC支付的交易服务费用，通常按交易费用比例，以TSC为单位。\n三、交易平台的服务内容\n（一）与资金相关的服务\n1.查询：本基金会将对您在本平台中的所有操作记录进行保存，不论该操作之目的最终是否实现。您可以在本平台中查询您的交易平台账户名下的交易记录，您认为记录有误的，本基金会将向您提供本公司已按照您的指令所执行的操作记录。\n2.款项专属：对您支付到本基金会并归属至您交易平台账户的款项及您通过交易平台账户收到的款项，本基金会将予以妥善保管，除本协议另行规定外，不作任何其它非您指令的用途。\n四、交易平台的交易规则\n您承诺在您登录交易平台与其它用户进行交易的过程中良好遵守如下交易规则：\n（一）交易机制\nTSC担保交易采取T+0机制，全天（24）小时交易。\n（二）浏览交易信息\n您在交易平台浏览交易信息时，应当仔细阅读交易信息中包含的全部内容，包括但不限于TSC价格行情、最新成交信息、交易记录、手续费、提现、转入或转出等信息，您完全接受交易信息中包含的全部内容后方可点击按钮进行交易。\n（三）提交委托\n在浏览完交易信息确认无误之后您可以提交交易申请。您提交交易申请后，即您授权本平台代理您进行相应的交易撮合。\n（四）查看交易明细\n您可以通过管理中心的交易记录中查看相应的成交记录。\n（五）定向转入/转出\n每个注册通过的TSC用户都会有一个区块链钱包地址，您通过输入另一位TSC用户的区块链钱包地址的方式转出TSC，为了确保资产安全，转入、转出的金额和次数每天有限制（具体限制公司有权随时进行调整，在调整之后会以TSC自有的方式通知用户），确认钱包地址、转入转出金额的情况下进行操作。\n五、交易平台用户资格及注册\n（一）注册须知\nTSC账号的所有解释权归属本基金会，您在TSC注册完成后，获得TSC账号的使用权，该使用权仅属于初始申请注册人。您须在本平台直接注册并取得本公司提供给您的平台账户，并且按照本公司要求提供相关信息完成激活后方可使用本服务。您同意：\n1.按照交易平台的要求准确提供并在取得该账户后及时更新您正确、最新及完整的身份信息及相关资料。\n2.您应当准确提供并及时更新您提供的电子邮件地址、联系电话、联系地址、邮政编码等联系方式，以便本公司与您进行及时、有效联系。\n3.因您未及时更新资料（包括但不限于身份证、户口本、护照等证件或其它身份证明文件、联系方式、与平台账户绑定的邮箱、手机号码等），导致本服务无法提供或提供时发生任何错误，您不得将此作为取消交易、拒绝付款的理由，您将承担因此产生的一切后果，本基金会不承担任何责任。\n4.您保证账户中所有资金来源的合法性，不得在交易平台或利用TSC服务从事非法或其它损害本基金会或第三方权益的活动。如发送或接收任何违法、违规、违反公序良俗、侵犯他人权益的信息，发送或接收传销材料或存在其它危害的信息或言论，未经本基金会授权使用或伪造信息等。若您未遵守上述规定，则本基金会有权保留追究您法律责任的权利，对可能涉及刑事犯罪的将移交公安机关依法处理。\n（二）账户安全\n1.您注册成功后，应妥善保管交易平台账户及密码。同时您将对使用该账户及密码进行的一切操作及言论承担全部责任，您同意：\n（1）本基金会通过您的账户、密码和支付密码识别您的指示，您应当妥善保管您的交易平台账户、密码、支付密码及身份信息，对于因密码泄露、身份信息泄露所致的损失，由您自行承担。\n（2）如您发现有他人冒用或盗用您的交易平台账户、密码、支付密码、验证码或任何其它未经合法授权之情形时，应立即以有效方式通知本基金会，要求本基金会暂停相关服务。您授权本基金会将前述情况同步给本平台，以保障您的合法权益。本基金会有权在合理时间内对您的该等请求采取行动，但对本基金会采取行动前您已经遭受的损失不承担任何责任。\n（3）确保您在持续登录本平台时段结束时，以正确步骤离开本平台。本基金会不能也不会对因您未能遵守本款约定而发生的任何损失、损毁及其它不利后果负责。您理解本基金会对您的请求采取行动需要合理期限，在此之前，本基金会对已执行的指令及(或)所导致的您的损失不承担任何责任。\n2.除非有法律规定或司法裁判，且征得本基金会同意，否则您的交易平台登账户、密码、支付密码不得以任何方式转让、赠与或继承（相关的用户有权自由支配的财产权益或数字资产权益除外）。\n六、交易平台服务使用规则\n为有效保障您使用本服务时的合法权益，您理解并同意接受以下规则：\n1、本基金会会以本平台界面提示（或发送到该手机的短信或电话或电子邮件等）方式通知您交易进展情况以及提示您进行下一步的操作，但本基金会不保证您能够收到或者及时收到该提示（或发送到该手机的短信或电话或电子邮件等），且不对此承担任何后果，因此，在交易过程中您应当及时登录到本平台查看和进行交易操作。因您没有及时查看和对交易状态进行修改或确认或未能提交相关申请而导致的任何纠纷或损失，本基金会不负任何责任。\n2、本基金会对您所交易的标的物不提供任何形式的鉴定、证明的服务。除本协议另有规定外，如您与交易对方发生交易纠纷，您授权由本基金会根据本协议及本基金会的各项规则进行处理。您为解决纠纷而支出的通讯费、文件复印费、鉴定费等均由您自行承担。因市场因素致使涨价跌价而使任何一方得益或者受到损失而产生的纠纷，本基金会不予处理。\n3、本基金会并非银行或其它金融机构，本协议项下的数字资产移转均通过TSC钱包来实现，你理解并同意您的资产在流转途中的合理时间。\n4、在使用本服务时，若您或您的交易对方未遵从本服务条款或平台说明、交易界面中的操作提示、规则，则本基金会有权拒绝为您与交易对方提供相关服务，且本基金会不承担损害赔偿责任。\n5、因您的过错导致的任何损失由您自行承担，例如：输入错误的转出钱包地址，不按照交易提示操作，未及时进行交易操作，遗忘或泄漏密码，密码被他人破解，您使用的手机或计算机被他人侵入等等。\n七、交易平台用户行为规范\n您在使用本服务时应遵守中华人民共和国相关法律法规、您所在国家或地区之法令及相关国际惯例，不将本服务用于任何非法目的（包括用于禁止或限制交易物品的交易），也不以任何非法方式使用本服务。或您使用交易平台的行为涉嫌违反国家相关法律法规、部门规章等，可以冻结您名下全部或部分交易平台账户的收入或支付的部分或全部款项，或冻结您的名下全部或部分交易平台账户，或暂停执行您基于您名下全部或部分交易平台账户发送的部分或全部指令。如果本基金会冻结款项或暂停执行您的指令，本基金会将会采取界面提示、电话或邮件或者短信等方式通知您，但本基金会不保证您能够收到或者及时收到该界面提示（或邮件或发送到该手机的短信或电话等），且不对此承担任何后果。在本基金会认为该等异常已经得到合理解释或有效证据支持或未违反国家相关法律法规及部门规章的情况下，最晚将于冻结款项或暂停执行指令之日起的30个工作日内解除冻结或恢复执行指令。\n八、隐私权保护\n（一）个人隐私信息是指涉及用户个人身份或个人隐私的信息，比如，用户真实姓名、身份证号、手机号码、手机设备识别码、IP地址、用户聊天记录。非个人隐私信息是指对本服务的操作状态以及使用习惯等明确且客观反映在本公司服务器端的基本记录信息、个人隐私信息范围外的其它普通信息，以及用户同意公开的上述隐私信息。\n（二）本公司将采取技术措施和其他必要措施，确保用户个人隐私信息安全，防止在本服务中收集的用户个人隐私信息泄露、毁损或丢失。在发生前述情形或者本公司发现存在发生前述情形的可能时，将及时采取补救措施。\n（三）除本协议另有规定外，本基金会不对外公开或向第三方提供您的信息，但以下情况除外：\n（1）事先获得您的明确授权；\n（2）只有披露您的个人资料，才能提供您需要的产品和（或）服务；\n（3）按照本协议的要求进行的披露；\n（4）根据法律法规的规定；\n（5）按照政府主管部门的要求；\n（6）为维护本基金会及其关联基金会的合法权益；\n（7）您使用交易平台账户成功登录过的其它平台；\n（8）对您或您所代表公司的身份真实性进行验证；\n（9）本基金会仅按现有技术提供相应的安全措施来使本公司掌握的信息不丢失，不被滥用和变造。这些安全措施包括向其它服务器备份数据和对您密码加密。尽管有这些安全措施，但本基金会不保证这些信息的绝对安全。\n九、服务的变更、中断、终止\n（一）鉴于网络服务的特殊性，您同意本基金会有权随时变更、中断或终止部分或全部的服务。但本基金会应当在变更、中断或终止之前通知用户。\n（二）如发生下列任何一种情形，本基金会有权变更、中断或终止向用户提供的免费服务或收费服务，而无需对用户或任何第三方承担任何责任：\n1.根据法律规定用户应提交真实信息，而用户提供的个人资料不真实。\n2.用户违反相关法律法规或本协议的约定；\n3.按照法律规定或有权机关的要求；\n4.出于安全的原因或其他必要的情形；\n（三）平台因下列状况无法正常运作，使您无法使用各项服务时，本基金会不承担损害赔偿责任，该状况包括但不限于：\n（1）本基金会在本平台公告之平台停机维护期间。\n（2）电信设备出现故障不能进行数据传输的。\n（3）因台风、地震、海啸、洪水、停电、战争、恐怖袭击等不可抗力之因素，造成本基金会平台障碍不能执行业务的。\n（4）由于黑客攻击、电信部门技术调整或故障、平台升级等原因而造成的服务中断或者延迟。\n十、法律适用与管辖\n本协议的效力、解释及纠纷的解决，适用于中华人民共和国法律。若您和本基金会之间发生任何纠纷或争议，首先应友好协商解决，协商不成的，用户同意将纠纷或争议提交本公司有管辖权的人民法院管辖。</string>
    <string name="confirm">确认</string>
    <string name="wallet">钱包</string>
    <string name="mineral">矿池</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>
    <string name="detail">明细</string>
    <string name="remain_detail">余额明细</string>
    <string name="trade_detail">收益明细</string>
    <string name="miner_detail">矿池明细</string>
    <string name="all_asset">总资产 (TSC)</string>
    <string name="all_asset1">挖矿总资产 (TSC)</string>
    <string name="yesterday">昨日收益：</string>
    <string name="collect">COLLECT</string>
    <string name="collect1">收款</string>
    <string name="currency">CURRENCY</string>
    <string name="currency1">转账</string>
    <string name="tip">挖矿收益每天00:00后更新</string>
    <string name="yesterday1">昨日收益</string>
    <string name="yesterday2">累计收益</string>
    <string name="miner_in">转入挖矿</string>
    <string name="miner_out">挖矿转出</string>
    <string name="all_read">全部已读</string>
    <string name="miner_asset">挖矿资产</string>
    <string name="vote">合伙人竞选投票</string>
    <string name="app_download">新版本下载</string>
    <string name="vote_record">投票记录</string>
    <string name="my_tsc">我的TSC</string>
    <string name="invalid_friend">邀请好友</string>
    <string name="inf_back">INF返还</string>
    <string name="setting">系统设置</string>
    <string name="notice_info">公告详情</string>
    <string name="setting1">设置</string>
    <string name="about_us">关于我们</string>
    <string name="no_message">你还没有消息～</string>
    <string name="no_trade">你暂无交易数据～</string>
    <string name="no_notice">你暂无系统公告～</string>
    <string name="login_pwd">登录密码</string>
    <string name="update_login_pwd">修改登录密码</string>
    <string name="pay_pwd">支付密码</string>
    <string name="update_pay_pwd">修改支付密码</string>
    <string name="toast_pay_pwd">请输入6位交易密码！</string>
    <string name="toast_pay_pwd1">请确保两次输入的交易密码一致！</string>
    <string name="touch_id">Touch ID</string>
    <string name="logout">退出登录</string>
    <string name="click_copy">点击二维码复制地址</string>
    <string name="address">地址</string>
    <string name="money">金额</string>
    <string name="hint_money">请输入收款金额（选填）</string>
    <string name="hint_money1">请输入转账金额</string>
    <string name="hint_money2">请输入转出资产数</string>
    <string name="hint_money3">请输入转入资产数</string>
    <string name="toast_copy_success">复制成功！</string>
    <string name="tsc_transfer">TSC转账</string>
    <string name="hint_address">请输入收款地址</string>
    <string name="toast_count_error">输入金额不合理！</string>
    <string name="hint_address1">请输入钱包地址</string>
    <string name="can_pay">可支配金额：</string>
    <string name="all">全部</string>
    <string name="fee">手续费</string>
    <string name="normal">普通</string>
    <string name="sure">确认</string>
    <string name="miner_out1">每笔收取</string>
    <string name="miner_out3">的手续费</string>
    <string name="miner_out2">0.00001TSC</string>
    <string name="miner_out4">挖矿资产转出将在1–2个工作日到账</string>
    <string name="tsc">TSC</string>
    <string name="wechat">微信公众号</string>
    <string name="email">联系邮箱</string>
    <string name="office_web">官方网站</string>
    <string name="wechat1">TSC公众号</string>
    <string name="email1">cooperation@tschain.top</string>
    <string name="office_web1">http://www.tschain.top</string>
    <string name="next">下一步</string>
    <string name="pay6_pwd">请输入6位数字，作为交易密码  </string>
    <string name="pay_pwd1">请输入交易密码</string>
    <string name="pay_pwd2">确认交易密码</string>
    <string name="pay_pwd3">请输入新的交易密码</string>
    <string name="pay_pwd4">确认新的交易密码</string>
    <string name="toast_register_login_success">注册并登录成功！</string>
    <string name="toast_login_success">登录成功！</string>
    <string name="toast_logout_success">退出登录成功！</string>
    <string name="toast_login_pwd_success">登录密码修改成功！</string>
    <string name="toast_login_pwd_success1">登录密码找回成功！</string>
    <string name="toast_pay_pwd_success">支付密码修改成功！</string>
    <string name="tsc_in">收到TSC</string>
    <string name="tsc_out">发出TSC</string>
    <string name="trade_info">交易详情</string>
    <string name="success">成功</string>
    <string name="sure_ing">确认中</string>
    <string name="in_address">收款地址</string>
    <string name="out_address">转出地址</string>
    <string name="height">区块高度</string>
    <string name="trade_code">交易号</string>
    <string name="trade_type">交易类型</string>
    <string name="toast_transfer_success">转账成功！</string>
    <string name="toast_miner_in_success">转入挖矿成功！</string>
    <string name="toast_miner_out_success">挖矿转出成功！</string>
    <string name="system_notice">系统公告</string>
    <string name="transfer_notification">转账通知</string>
    <string name="all_read_success">已全部已读！</string>
    <string name="check_account">手机号码已注册！</string>
    <string name="select_email">请选择邮件类应用</string>
    <string name="invalid_address">邀请链接：</string>
    <string name="copy_address">复制链接，邀请好友</string>
    <string name="invalid_rule">邀请奖励规则</string>
    <string name="invalid_rule_info">为支持TSC社群合伙人竞选投票，TSC同时开放“邀请好友，共赢TSC”的活动，抓紧邀请好友为你投上宝贵的一票吧！\n\n活动规则：\n\n1. TSC APP已上线邀请功能，邀请好友加入TSC，好友完成注册即为邀请成功；\n\n2. 邀请成功后你和你邀请的好友都可获得300TSC（3日内到账）；\n\n3. 每位用户邀请好友上限为10位；\n\n4. 本次邀请活动奖励TSC上限为100万，送完为止；\n\n5. 同一手机号、同一终端设备号、同一IP或其他同理显示同一用户的情形，均视为同一用户，同一用户仅可被邀请一次，如发现作弊行为，TSC有权取消邀请奖励；\n\n6. 本活动最终解释权归TSC团队所有。</string>
    <string name="people">人</string>
    <string name="has_invite">已邀请</string>
    <string name="has_get">已获得</string>
</resources>