<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray1">

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/nav_back_normal"
            android:layout_centerVertical="true"
            android:layout_marginLeft="9dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting1"
            android:textColor="@color/textBlack"
            android:textSize="18sp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_login_pwd"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_pwd"
            android:textColor="@color/textBlack"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="27dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/update_login_pwd"
            android:textColor="@color/textGray"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:gravity="right"/>

        <ImageView
            android:layout_width="8dp"
            android:layout_height="15dp"
            android:src="@mipmap/my_arrow"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="27dp"
            android:layout_marginLeft="23dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pay_pwd"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginTop="1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_pwd"
            android:textColor="@color/textBlack"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="27dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/update_pay_pwd"
            android:textColor="@color/textGray"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:gravity="right"/>

        <ImageView
            android:layout_width="8dp"
            android:layout_height="15dp"
            android:src="@mipmap/my_arrow"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="27dp"
            android:layout_marginLeft="23dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginTop="1dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/touch_id"
            android:textColor="@color/textBlack"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="27dp"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/img_touch"
            android:layout_width="47dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="28dp"
            android:src="@mipmap/btn_blue"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="42dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/bg_round_text_white2"
        android:text="@string/logout"
        android:textSize="18sp"
        android:textColor="@color/red"
        android:gravity="center"/>

</LinearLayout>