<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@mipmap/home_popup_bg"
        android:scaleType="fitXY"
        android:layout_marginTop="-15dp"
        android:layout_marginLeft="-15dp"
        android:layout_marginRight="-15dp"/>

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/back_white"
            android:layout_marginLeft="9dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miner_out"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_title"
        android:orientation="vertical">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="70dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_round_text_white1">

            <LinearLayout
                android:id="@+id/ll_count"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="28dp"
                android:background="@drawable/bg_round_edit_gray1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money"
                    android:textColor="@color/textBlack"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"/>

                <EditText
                    android:id="@+id/et_count"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:layout_marginLeft="20dp"
                    android:hint="@string/hint_money2"
                    android:textSize="14sp"
                    android:inputType="numberDecimal"
                    android:cursorVisible="false"
                    android:singleLine="true"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/textBlack"
                    android:textColorHint="@color/textGray"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="34dp"
                android:layout_marginRight="30dp">

                <TextView
                    android:id="@+id/tv_can_pay"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/can_pay"
                    android:textColor="@color/c66"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/tv_all"
                    android:layout_width="48dp"
                    android:layout_height="24dp"
                    android:background="@drawable/bg_round_text_blue1"
                    android:text="@string/all"
                    android:textColor="@color/textBlue"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginTop="33dp">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@mipmap/tips_normal"
                    android:layout_marginRight="11dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miner_out1"
                    android:textColor="@color/textGray"
                    android:textSize="11sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miner_out2"
                    android:textColor="@color/red"
                    android:textSize="11sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miner_out3"
                    android:textColor="@color/textGray"
                    android:textSize="11sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@mipmap/tips_normal"
                    android:layout_marginRight="11dp"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miner_out4"
                    android:textColor="@color/textGray"
                    android:textSize="11sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_sure"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="60dp"
                android:text="@string/sure"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:elevation="2dp"
                android:gravity="center"
                android:background="@drawable/bg_round_text_gray"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>