<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray1">

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/nav_back_normal"
            android:layout_centerVertical="true"
            android:layout_marginLeft="9dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:textColor="@color/textBlack"
            android:textSize="18sp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="34dp"
        android:src="@mipmap/home_popup_icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tsc"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:textColor="@color/textBlack"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="84dp"
        android:layout_height="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="13dp"
        android:background="@drawable/bg_round_text_gray2"
        android:text=""
        android:gravity="center"
        android:textColor="@color/textGray1"
        android:textSize="13sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="13dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wechat"
            android:textColor="@color/textBlack"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/textGray"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:layout_marginRight="21dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray"/>

    <LinearLayout
        android:id="@+id/ll_email"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/textBlack"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/email1"
            android:textColor="@color/textGray"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:layout_marginRight="21dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray"/>

    <LinearLayout
        android:id="@+id/ll_web"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/office_web"
            android:textColor="@color/textBlack"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/office_web1"
            android:textColor="@color/textGray"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:layout_marginRight="21dp"/>

    </LinearLayout>

</LinearLayout>